# Informatik3

./: gitInfo.sh
exercise-001/: CMakeLists.txt  main.cpp  run_cmake.sh
exercise-003/: main.cpp  vectorint.cpp  vectorint.hpp
exercise4/: CMakeLists.txt  main.cpp  vectorint.cpp  vectorint.hpp
test/: CMakeLists.txt  curl  curl.cpp  run_cmake.sh  test.cpp
